--- a/package.json
+++ b/package.json
@@ -14,19 +14,23 @@
     "deploy:preview": "vercel"
   },
   "dependencies": {
-    "@astrojs/react": "^3.0.0",
-    "@astrojs/tailwind": "^5.0.0",
-    "@notionhq/client": "^4.0.1",
-    "astro": "^5.13.5",
+    "@astrojs/react": "^3.6.3",
+    "@notionhq/client": "^5.1.0",
+    "astro": "^5.13.7",
     "react": "^18.3.1",
-    "react-dom": "^18.3.0"
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
-    "autoprefixer": "^10.4.20",
-    "postcss": "^8.4.47",
-    "tailwindcss": "^3.4.11",
-    "typescript": "^5.5.3"
+    "@astrojs/tailwind": "^5.1.5",
+    "@types/react": "^18.3.24",
+    "@types/react-dom": "^18.3.7",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.17",
+    "typescript": "^5.9.2"
+  },
+  "overrides": {
+    "vite": "^6.1.7",
+    "esbuild": "^0.25.9"
   }
 }
